Fix video player alignment

--- a/less/main.less
+++ b/less/main.less
@@ -424,6 +424,7 @@ footer {
   .video-selection {
     width: 22.222222%;
     padding: 0;
+    margin: 0;
     margin-right: auto;
 
     ul, li {
@@ -436,7 +437,7 @@ footer {
       width: 200px;
       height: 112px;
       background: @highlight;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
       cursor: pointer;
       border-radius: 0;
       
@@ -466,6 +467,10 @@ footer {
       vertical-align: middle;
       padding-top: 50px;
     }
+  }
+
+  .video-player {
+    height: 353px;
   }
 
   .auto-resizable-iframe {
